--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,14 @@ anyio==3.5.0
 appnope==0.1.3
 asgiref==3.5.0
 asttokens==2.0.5
+async-timeout==4.0.2
 attrs==21.4.0
 backcall==0.2.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
 click==8.1.2
 decorator==5.1.1
+Deprecated==1.2.13
 executing==0.8.3
 fastapi==0.75.1
 h11==0.13.0
@@ -16,6 +18,8 @@ iniconfig==1.1.1
 ipython==8.2.0
 jedi==0.18.1
 matplotlib-inline==0.1.3
+mypy==0.942
+mypy-extensions==0.4.3
 packaging==21.3
 parso==0.8.3
 pexpect==4.8.0
@@ -31,6 +35,7 @@ Pygments==2.11.2
 pyparsing==3.0.7
 pytest==7.1.1
 python-dotenv==0.20.0
+redis==4.2.2
 requests==2.27.1
 six==1.16.0
 sniffio==1.2.0
@@ -38,7 +43,11 @@ stack-data==0.2.0
 starlette==0.17.1
 tomli==2.0.1
 traitlets==5.1.1
+types-requests==2.27.16
+types-ujson==4.2.1
+types-urllib3==1.26.11
 typing-extensions==4.1.1
 urllib3==1.26.9
 uvicorn==0.17.6
 wcwidth==0.2.5
+wrapt==1.14.0
