--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,7 @@ services:
       - redis
     volumes:
       - ./pokeapi:/app/pokeapi
+      - ./tests:/app/tests
     env_file: .envars
     command: ["uvicorn", "pokeapi.main:app", "--host", "0.0.0.0", "--port", "80", "--reload"]
     ports:
